# pdf-extractor

./: .gitignore  README.md  pyproject.toml  workflow.mmd
pdf_extractor/: cli.py  cli_finetune.py  cli_template.py  sync_to_onedrive.py
pdf_extractor/config/: extraction_config.py
pdf_extractor/core/: extractor.py  models.py
pdf_extractor/fine_tuning/: data_processor.py  trainer.py
pdf_extractor/finetune_commands/: __init__.py  excel2training.py  list_jobs.py  list_models.py  status.py  train.py  utils.py  validate.py
pdf_extractor/services/: gpt_implementations.py  gpt_service.py  pdf_service.py  sharepoint_schema_builder.py
pdf_extractor/template/: __init__.py  generator.py
pdf_extractor/utils/: logging.py
pdf_extractor/validation/: model_validator.py
